Closed Bug 1670731 Opened 4 years ago Closed 4 years ago

key down event isn't fired during composition when using Wayland IM Module

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox84 --- fixed

People

(Reporter: m_kato, Assigned: m_kato)

References

(Blocks 1 open bug)

Details

(Keywords: inputmethod)

Attachments

(1 file)

This issue is on Wayland only.

When using default installation of Debian/sid and Wayland, default IM Module seems to be im-wayland.so. When using this environment, key down event isn't fired during inputting composition text.

I guess we might be that mIsKeySnooped should be false if IM is wayland.

Blocks: wayland
Assignee: nobody → m_kato

Wayland IM module (im-wayland.so, [*1]) doesn't use gtk_key_snooper_install,
so snooper mode is different of other IM modules.

*1 https://gitlab.gnome.org/GNOME/gtk/-/blob/master/gtk/gtkimcontextwayland.c

Pushed by m_kato@ga2.so-net.ne.jp:
https://hg.mozilla.org/integration/autoland/rev/993a11999188
Key down event isn't fired during composition when using Wayland IM Module. r=masayuki
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: