Bug 1670731 - Key down event isn't fired during composition when using Wayland IM Module. r=masayuki

Wayland IM module (im-wayland.so, [*1]) doesn't use `gtk_key_snooper_install`,
so snooper mode is different of other IM modules.

*1 https://gitlab.gnome.org/GNOME/gtk/-/blob/master/gtk/gtkimcontextwayland.c

Differential Revision: https://phabricator.services.mozilla.com/D93894